<resources>
    <string name="app_name">DataKaryawan</string>

    <string name="nik">NIK</string>
    <string name="nama">Nama</string>
    <string name="jabatan">Jabatan</string>
    <string name="jeniskelamin">Jenis Kelamin</string>
    <string name="pria">Pria</string>
    <string name="wanita">Wanita</string>
    <string name="hobi">Hobi</string>
    <string name="olahraga">OlahRaga</string>
    <string name="baca">Baca</string>
    <string name="nonton">Nonton</string>
    <string name="save">Save</string>
    <string name="reset">Reset</string>
    <string name="tanggallahir">Tanggal Lahir</string>
    <string name="setdata">Set Data</string>
    <string name="errornik">Nik harus diisi</string>

</resources>
