<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:scrollbars="none">


<LinearLayout
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/textViewNIK"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nik" />

    <EditText
        android:id="@+id/editTextNIK"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nama" />

    <EditText
        android:id="@+id/editTextNama"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />



    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/jabatan" />


    <Spinner
        android:id="@+id/spinnerJabatan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/textViewJK"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/jeniskelamin" />


    <RadioGroup
        android:id="@+id/radioGroupJenisKelamin"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radioButtonPria"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/pria" />

        <RadioButton
            android:id="@+id/radioButtonWanita"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/wanita" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hobi" />

    <CheckBox
        android:id="@+id/checkBoxOlahraga"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="false"

        android:text="@string/olahraga" />

    <CheckBox
        android:id="@+id/checkBoxBaca"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="false"
        android:text="@string/baca" />

    <CheckBox
        android:id="@+id/checkBoxNonton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="false"
        android:text="@string/nonton" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save" />

        <Button
            android:id="@+id/buttonReset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset" />

        <Button
            android:id="@+id/buttonSetData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setdata" />


    </LinearLayout>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tanggallahir" />

    <EditText
        android:id="@+id/editTextTanggalLahir"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="false"/>

    <TextView
        android:id="@+id/textViewHasil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Hasil" />


</LinearLayout>
</ScrollView>