<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="net.agusharyanto.datakaryawan.RestoranActivity">


    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Nama" />

    <EditText
        android:id="@+id/editTextNama"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Menu" />

    <Spinner
        android:id="@+id/spinnerMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Tambahan" />

    <CheckBox
        android:id="@+id/checkBoxTempe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="false"

        android:text="Tempe" />

    <CheckBox
        android:id="@+id/checkBoxKerupuk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="false"
        android:text="Kerupuk" />

    <CheckBox
        android:id="@+id/checkBoxTahu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="false"
        android:text="Tahu" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Pembayaran" />

    <RadioGroup
        android:id="@+id/radioGroupPembayaran"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radioButtonTunai"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="Tunai" />

        <RadioButton
            android:id="@+id/radioButtonNonTunai"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="Non Tunai" />
    </RadioGroup>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save" />

        <Button
            android:id="@+id/buttonReset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset" />

        <Button
            android:id="@+id/buttonSetData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setdata" />


    </LinearLayout>



    <TextView
        android:id="@+id/textViewHasil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Hasil" />

</LinearLayout>
